# dscanner

./: .gitignore  Dockerfile  README.md  pyproject.toml
dscanner/: __init__.py  cli.py  sbom.py
parikshak/: __init__.py  cli.py  db.py  scanner.py
