[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dscanner"
version = "1.0.0"
description = "Fast Docker image vulnerability scanner — finds CVEs, secrets, and misconfigurations"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Docker Scanner Team"},
]
keywords = ["docker", "security", "vulnerability", "scanner", "container", "cve", "sbom"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "httpx>=0.25",
    "rich>=13.0",
    "click>=8.0",
    "packaging>=23.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
dscanner = "dscanner.cli:main"

[project.urls]
Homepage = "https://github.com/yourorg/dscanner"
Documentation = "https://github.com/yourorg/dscanner#readme"
Repository = "https://github.com/yourorg/dscanner"
Issues = "https://github.com/yourorg/dscanner/issues"

[tool.setuptools.packages.find]
include = ["dscanner*"]
